tests/e2e/nested_service_block5.error
Error: syntax error in story at line 4, column 14

4|            when tweet track: foo as omg
                   ^^^^

E0066: Nested when blocks are not allowed
