tests/e2e/nested_service_block5.story
twitter stream
    when tweet track: "Storyscript" as ss
        foo = ss["foobar"]
        when tweet track: foo as omg
            break
